attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743780680762.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/BaseI[ 12%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/MLInterpreter.cpp.o
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp: In member function ‘virtual void ai_language::MLInterpreter::handleSetCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:188:37: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘std::map<std::__cxx11::basic_string<char>, double>::mapped_type’ {aka ‘double’} in assignment
  188 |             parameters[paramName] = paramValue;
      |                                     ^~~~~~~~~~
      |                                     |
      |                                     std::string {aka std::__cxx11::basic_string<char>}
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:192:37: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘std::map<std::__cxx11::basic_string<char>, double>::mapped_type’ {aka ‘double’} in assignment
  192 |             parameters[paramName] = paramValue;
      |                                     ^~~~~~~~~~
      |                                     |
      |                                     std::string {aka std::__cxx11::basic_string<char>}
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:200:37: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘std::map<std::__cxx11::basic_string<char>, double>::mapped_type’ {aka ‘double’} in assignment
  200 |             parameters[paramName] = paramValue;
      |                                     ^~~~~~~~~~
      |                                     |
      |                                     std::string {aka std::__cxx11::basic_string<char>}
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:209:41: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘std::map<std::__cxx11::basic_string<char>, double>::mapped_type’ {aka ‘double’} in assignment
  209 |                 parameters[paramName] = paramValue;
      |                                         ^~~~~~~~~~
      |                                         |
      |                                         std::string {aka std::__cxx11::basic_string<char>}
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp: In member function ‘virtual void ai_language::MLInterpreter::handleDeleteModelCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:765:78: warning: unused parameter ‘args’ [-Wunused-parameter]
  765 | void MLInterpreter::handleDeleteModelCommand(const std::vector<std::string>& args) {
      |                                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp: In member function ‘virtual void ai_language::MLInterpreter::handleDebugCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:777:72: warning: unused parameter ‘args’ [-Wunused-parameter]
  777 | void MLInterpreter::handleDebugCommand(const std::vector<std::string>& args) {
      |                                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp: In member function ‘virtual void ai_language::MLInterpreter::handleCrossValidateCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:781:80: warning: unused parameter ‘args’ [-Wunused-parameter]
  781 | void MLInterpreter::handleCrossValidateCommand(const std::vector<std::string>& args) {
      |                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp: In member function ‘virtual void ai_language::MLInterpreter::handleExportResultsCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:785:80: warning: unused parameter ‘args’ [-Wunused-parameter]
  785 | void MLInterpreter::handleExportResultsCommand(const std::vector<std::string>& args) {
      |                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp: In member function ‘virtual void ai_language::MLInterpreter::handleScheduleTrainingCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:789:83: warning: unused parameter ‘args’ [-Wunused-parameter]
  789 | void MLInterpreter::handleScheduleTrainingCommand(const std::vector<std::string>& args) {
      |                                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:90: CMakeFiles/ai_language_lib.dir/src/interpreters/MLInterpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2